added bstdbmeter.[hc], build testgui.
Fri Aug 20 11:38:22 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/Makefile.am: added bstdbmeter.[hc], build testgui.

        * beast-gtk/bstdbmeter.[hc]: new files, implementing:
        BstDBSetup: a helper structure, containing the setup for a dB scale,
        including coloring and spline approximated curvature.
        BstDBLabeling: a new widget, able to draw dB numbers or dB scale dashes.
        BstDBBeam: a new widget, able to display a led beam indicating dB values.
        BstDBMeter: container widget to manage an arrangement of db-labeling,
        db-beam and h/v-scale widgets, regarding borders, dbsetup, etc.

        * beast-gtk/testgui.c: added db widget test.

        * beast-gtk/dialogs/radgets-beast.xml: define db-labeling, db-beam,
        db-meter. added db-meter to bus-editor.

svn path=/trunk/; revision=2368

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -33,7 +33,7 @@ progs_LDADD = $(strip 			\
 #
 # BEAST header files that don't get installed
 beast_headers = $(strip \
-				bstbusmixer.h	bstbuseditor.h		\
+	bstdbmeter.h		bstbusmixer.h	bstbuseditor.h		\
 	bstcanvassource.h	bstapp.h	bstasciipixbuf.h	bstcanvaslink.h	    \
 	bstpatterncolumns.h	bstxkb.h	bstpatternview.h	bstpatternctrl.h    \
 	bstkeybindings.h	bstprofiler.h	bstgrowbar.h		bstbusview.h        \
@@ -53,7 +53,7 @@ beast_headers = $(strip \
 )
 # BEAST c sources to build the program from
 beast_sources = $(strip \
-				bstbusmixer.c	bstbuseditor.c		\
+	bstdbmeter.c		bstbusmixer.c	bstbuseditor.c		\
 	bstcanvassource.c	bstapp.c	bstasciipixbuf.c	bstcanvaslink.c	    \
 	bstpatterncolumns.c	bstxkb.c	bstpatternview.c	bstpatternctrl.c    \
 	bstkeybindings.c	bstprofiler.c	bstgrowbar.c		bstbusview.c        \
@@ -171,11 +171,11 @@ EXTRA_PROGRAMS = beast-\$(BST_VERSION)		# make automake-1.4 eat beast____BST_VER
 beast____BST_VERSION__SOURCES = bstmain.c $(beast_sources)
 beast____BST_VERSION__LDADD = $(progs_LDADD)
 beast_objects = $(beast____BST_VERSION__OBJECTS)
-noinst_PROGRAMS = tsmview # testgui # bststest
+noinst_PROGRAMS = tsmview testgui # bststest
 tsmview_SOURCES = tsmview.c cxxdummy.cc
 tsmview_LDADD = $(progs_LDADD)
-#testgui_SOURCES = testgui.c $(beast_sources)
-#testgui_LDADD = $(progs_LDADD)
+testgui_SOURCES = testgui.c $(beast_sources)
+testgui_LDADD = $(progs_LDADD)
 # bststest_SOURCES = bststest.c bstutils.c bstqsampler.c cxxdummy.cc
 # bststest_LDADD = $(progs_LDADD)
 
