lots of tooltip additions. sort notebook tabs by object type.
Sun Aug 22 03:37:36 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstapp.c: lots of tooltip additions.
        sort notebook tabs by object type.

        * beast-gtk/bstbusmixer.c: keep a list of items we listen on, for
        proper destruction.

        * beast-gtk/bstsupershell.[hc]: create and update notebook tabs with
        tooltips and images of songs and synths.

        * beast-gtk/dialogs/radgets-standard.xml: wrap boxes don't have a
        padding pack property.

        * beast-gtk/gxk/gxkstock.[hc]: added icon size for tabulators.

        * beast-gtk/gxk/gxkutils.[hc]: added convenience functions:
        gxk_notebook_descendant_get_page(), gxk_notebook_descendant_get_tab()
        and gtk_box_get_nth_child().

        * beast-gtk/icons/*.{xcf|png}: added icons for song, wave-repo,
        csynth and midi-synth.

svn path=/trunk/; revision=2377

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -13,6 +13,9 @@ SRC_IMAGES = @STRIP_BEGIN@	\
 	event-control.xcf	\
 	knob.xcf		\
 	loopleft.xcf		\
+	mini-csynth.xcf		\
+	mini-song.xcf		\
+	mini-waverepo.xcf	\
 	mouse_tool.xcf		\
 	no_olink.xcf		\
 	noicon.xcf		\
@@ -55,6 +58,10 @@ STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_KNOB			$(srcdir)/knob.png		\
 	STOCK_LOAD			$(srcdir)/cdrom.png		\
 	STOCK_LOAD_LIB			$(srcdir)/cdroms.png		\
+	STOCK_MINI_CSYNTH		$(srcdir)/mini-csynth.png	\
+	STOCK_MINI_MIDI_SYNTH		$(srcdir)/mini-midi-synth.png	\
+	STOCK_MINI_SONG			$(srcdir)/mini-song.png		\
+	STOCK_MINI_WAVE_REPO		$(srcdir)/mini-waverepo.png	\
 	STOCK_MOUSE_TOOL		$(srcdir)/mouse_tool.png	\
 	STOCK_MUSIC_CUT			$(srcdir)/music-cut.png		\
 	STOCK_MUSIC_COPY		$(srcdir)/music-copy.png	\
