added dB property type.
Wed Aug 25 18:15:00 2004  Tim Janik  <timj@gtk.org>

        * bsetype.h: added dB property type.

        * bsebus.[hc]: construct effect stack csynth and add a volume
        module into it. update the volume effect from volume properties.

        * bsebusmodule.idl:
        * bsebusmodule.cc: implement module functionality needed by busses.

        * bsecontainer.c: fix base-name handling in
        bse_container_new_child_bname() for objects with default names.

        * bseproject.[hc: implement bse_project_create_intern_csynth().

        * bsesong.c: trigger effect stack creation of busses after adding
        them to songs.

svn path=/trunk/; revision=2388

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -8,7 +8,7 @@ SUBDIRS = icons zintern . tests
 # need -I$(top_srcdir) for <bse/bsedefs.h>
 # need -I$(top_builddir) for <sfi/sficonfig.h>
 # need -I$(srcdir) for "bseserver.h" in .gen-proc.c
-# need -I. (builddir) for "bseamplifier.gen-idl.h" in bseamplifier.cc
+# need -I. (builddir) for "bsecore.gen-idl.h" in bsecore.cc
 INCLUDES = -I$(top_srcdir) -I$(top_builddir) -I$(srcdir) -I. $(BSE_CFLAGS) -DG_DISABLE_DEPRECATED -DG_DISABLE_CONST_RETURNS
 
 #
@@ -94,17 +94,20 @@ bse_c_sources = $(strip \
 # Synthesis Modules
 bse_idl_sources = $(strip \
 	bseamplifier.idl	\
+	bsebusmodule.idl	\
 	bsecore.idl		\
 	bseprobe.idl		\
 	bsesummation.idl	\
 )
 $(srcdir)/bseamplifier.cc: bseamplifier.gen-idl.h
+$(srcdir)/bsebusmodule.cc: bsebusmodule.gen-idl.h
 $(srcdir)/bsecore.cc: bsecore.gen-idl.h
 $(srcdir)/bseprobe.cc: bseprobe.gen-idl.h
 $(srcdir)/bsesummation.cc: bsesummation.gen-idl.h
 idl_built_sources += $(bse_idl_sources:.idl=.gen-idl.h)
 bse_cc_sources = $(strip 	\
 	bseamplifier.cc		\
+	bsebusmodule.cc		\
 	bsecore.cc		\
 	bseprobe.cc		\
 	bsesummation.cc		\
