--- a/configure.in
+++ b/configure.in
@@ -17,7 +17,7 @@ AC_PREREQ(2.57)
 AC_DIVERT_BEFORE_HELP([
 BSE_MAJOR_VERSION=0
 BSE_MINOR_VERSION=6
-BSE_MICRO_VERSION=2
+BSE_MICRO_VERSION=3
 BSE_INTERFACE_AGE=0
 BSE_BINARY_AGE=0
 ])
@@ -30,7 +30,7 @@ dnl# if any functions have been added, set BSE_INTERFACE_AGE to 0.
 dnl# if backwards compatibility has been broken,
 dnl# set BSE_BINARY_AGE _and_ BSE_INTERFACE_AGE to 0.
 dnl# BST_RELEASE_CANDIDATE may contain rc[0-9]+ or nothing
-BST_RELEASE_CANDIDATE= #rc2
+BST_RELEASE_CANDIDATE=rc1
 
 # version number setup
 BSE_VERSION=$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION
@@ -111,7 +111,7 @@ AC_DEFUN(AC_I18N_REQUIREMENTS,
 [
     dnl TRANSLATORS: for each new translation added to ALL_LINGUAS, please also update
     dnl the corresponding links in docs/site-development.texi (search for ALL_LINGUAS).
-    ALL_LINGUAS="az ca cs de el en_CA en_GB es fr hr mn nl pt pt_BR sq sr sr@Latn sv ru"
+    ALL_LINGUAS="az ca cs de el en_CA en_GB es fr hr ja mn nl pt pt_BR sq sr sr@Latn sv ru"
     dnl TRANSLATORS: for each new translation added to ALL_LINGUAS, please also update
     dnl the corresponding links in docs/site-development.texi (search for ALL_LINGUAS).
     AC_SUBST(ALL_LINGUAS)
