added new plugin from Artem Popov. added license information and changed
Tue Aug 31 08:11:50 2004  Tim Janik  <timj@gtk.org>

        * bsecontribsampleandhold.idl:
        * bsecontribsampleandhold.cc: added new plugin from Artem Popov.
        added license information and changed namespace to Bse::Contrib.

svn path=/trunk/; revision=2418

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -14,11 +14,12 @@ plugindir = $(bseplugindir)
 #
 # C++ Plugins
 #
-plugin_idl_files = $(strip	\
-	davchorus.idl		\
-	bsebalance.idl		\
-	artscompressor.idl	\
-	davbassfilter.idl	\
+plugin_idl_files = $(strip		\
+	davchorus.idl			\
+	bsebalance.idl			\
+	artscompressor.idl		\
+	davbassfilter.idl		\
+	bsecontribsampleandhold.idl	\
 )
 EXTRA_HEADERS += $(plugin_idl_files)
 # setup generation of C++ plugins from idl files
