C++ified the noise module from bsenoise.[hc].
Sun Jul 18 21:54:09 2004  Stefan Westerfeld  <stefan@space.twc.de>

        * bsenoise.cc bsenoise.idl: C++ified the noise module from bsenoise.[hc].

        * bsenoise.[hc]: Obsolete, removed.

svn path=/trunk/; revision=2420

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -20,6 +20,7 @@ plugin_idl_files = $(strip		\
 	artscompressor.idl		\
 	davbassfilter.idl		\
 	bsecontribsampleandhold.idl	\
+	bsenoise.idl			\
 )
 EXTRA_HEADERS += $(plugin_idl_files)
 # setup generation of C++ plugins from idl files
@@ -44,7 +45,6 @@ PLUGIN_CFILES = $(strip		\
 	bseiirfilter.[hc]	\
 	bsemixer.[hc]		\
 	bsemult.[hc]		\
-	bsenoise.[hc]		\
 	bsesimpleadsr.[hc]	\
 	bsesequencer.[hc]	\
 	davorgan.[hc]		\
