Added bsefextract / bsefcompare.
Fri Sep  3 10:39:15 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/Makefile.am: Added bsefextract / bsefcompare.

	* tools/bsefextract.cc: Tool to extract features from a wav/ogg/mp3
	file, such as the spectrum or the end time. The feature extraction
	process allows to compare sample files that are not byte-by-byte
	equivalent, but sound similar, such as a .wav file and its
	corresponding .ogg file.

	* tools/bsefcompare.cc: Tool to compare feature files generated by
	bsefextract.

svn path=/trunk/; revision=2449

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -9,9 +9,16 @@ DEFS += -DG_LOG_DOMAIN=\"BeastTools\" -DG_DISABLE_CONST_RETURNS #   """""""
 #
 # programs to build
 #
-noinst_PROGRAMS = bsewavetool
+noinst_PROGRAMS = bsewavetool bsefextract bsefcompare
 bsewavetool_SOURCES = bsewavetool.c sfiutils.c bseloopfuncs.c
 bsewavetool_LDADD = $(programs_ldadd)
+
+bsefextract_SOURCES = bsefextract.cc
+bsefextract_LDADD = $(programs_ldadd)
+
+bsefcompare_SOURCES = bsefcompare.cc
+bsefcompare_LDADD = $(programs_ldadd)
+
 # libraries to link programs against
 programs_ldadd = $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 
