new icons submitted by Artem Popov <tfwo@mail.ru>.
Sun Sep  5 16:36:09 2004  Tim Janik  <timj@gtk.org>

        * icons/compressor.png:
        * icons/compressor.xcf:
        * icons/compressor2.png:
        * icons/compressor2.xcf:
        * icons/sample+hold.png:
        * icons/sample+hold.xcf: new icons submitted by
        Artem Popov <tfwo@mail.ru>.

        * artscompressor.idl: use new compressor icons.

        * bsecontribsampleandhold.idl: use new sample+hold icon.

svn path=/trunk/; revision=2470

--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -33,6 +33,7 @@ icon_list += noise.png
 icon_list += organ.png
 icon_list += prod.png
 icon_list += reverb.png
+icon_list += sample+hold.png
 icon_list += sequencer.png
 icon_list += strings.png
 icon_list += sub.png
@@ -53,6 +54,7 @@ icon_list += organ.xcf
 icon_list += osc.xcf
 icon_list += pipe.xcf
 icon_list += prod.xcf
+icon_list += sample+hold.xcf
 icon_list += sequencer.xcf
 icon_list += sine.xcf
 icon_list += speaker.xcf
