--- a/configure.in
+++ b/configure.in
@@ -111,7 +111,7 @@ AC_DEFUN(AC_I18N_REQUIREMENTS,
 [
     dnl TRANSLATORS: for each new translation added to ALL_LINGUAS, please also update
     dnl the corresponding links in docs/site-development.texi (search for ALL_LINGUAS).
-    ALL_LINGUAS="az ca cs de el en_CA en_GB eo es fr hr ja mn nl pt pt_BR sq sr sr@Latn sv ru"
+    ALL_LINGUAS="az ca cs de el en_CA en_GB eo es fr hr ja mn nl pt pt_BR ru sq sr sr@Latn sv"
     dnl TRANSLATORS: for each new translation added to ALL_LINGUAS, please also update
     dnl the corresponding links in docs/site-development.texi (search for ALL_LINGUAS).
     AC_SUBST(ALL_LINGUAS)
