--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -25,6 +25,8 @@ icon_list += atan.png
 icon_list += balance.png
 icon_list += canyon.png
 icon_list += chorus.png
+icon_list += compressor.png
+icon_list += compressor2.png
 icon_list += davbassfilter.png
 icon_list += drum.png
 icon_list += eguitar.png
@@ -44,6 +46,8 @@ icon_list += atan.xcf
 icon_list += balance.xcf
 icon_list += canyon.xcf
 icon_list += chorus.xcf
+icon_list += compressor.xcf
+icon_list += compressor2.xcf
 icon_list += cyria-filter.xcf
 icon_list += drum.xcf
 icon_list += eguitar.xcf
