added mime type for audio/x-bse and audio/x-bsewave, pointed out by Artem
Mon Sep 13 14:10:21 2004  Tim Janik  <timj@gtk.org>

        * data/beast.desktop.in: added mime type for audio/x-bse and
        audio/x-bsewave, pointed out by Artem Popov.

svn path=/trunk/; revision=2520

--- a/data/beast.desktop.in
+++ b/data/beast.desktop.in
@@ -9,3 +9,4 @@ TryExec=beast
 Exec=beast
 Terminal=false
 Categories=GTK;GNOME;Application;AudioVideo;AudioVideoEditing;Music;Player;
+MimeType=audio/x-bse;audio/x-bsewave;
