added missing dependancy
svn path=/trunk/; revision=2559

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -52,6 +52,7 @@ dotdesktopdir = $(datadir)/applications
 dotdesktop_in_files = beast.desktop.in
 dotdesktop_DATA = $(dotdesktop_in_files:.desktop.in=.desktop)
 CLEANFILES += beast.desktop
+beast.desktop: beast.desktop.in
 
 # generate and install .xml mime info file
 @INTLTOOL_XML_RULE@
