--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -87,6 +87,7 @@ config-paths.h: $(top_builddir)/config.status Makefile
 	&& echo "#define BSE_PATH_BINARIES        \"${bindir}\"" >> xgen-cph \
 	&& echo "#define BSE_PATH_LADSPA          \"${bseladspapath}\"" >> xgen-cph \
 	&& echo "#define BSE_PATH_PLUGINS         \"${bseplugindir}\"" >> xgen-cph \
+	&& echo "#define BSE_PATH_DRIVERS         \"${bsedriverdir}\"" >> xgen-cph \
 	&& echo "#define BSE_PATH_DEMOS           \"${bsedemodir}\"" >> xgen-cph \
 	&& echo "#define BSE_PATH_SAMPLES         \"${bsesampledir}\"" >> xgen-cph \
 	&& echo "#define BSE_PATH_EFFECTS         \"${bseeffectdir}\"" >> xgen-cph \
