added missing files
svn path=/trunk/; revision=2607

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -64,14 +64,20 @@ bse/bsebiquadfilter.c
 bse/bsebus.c
 bse/bseconstant.c
 bse/bsecore.idl
+bse/bsedevice.c
 bse/bseenums.c
 bse/bseinstrumentinput.c
 bse/bseinstrumentoutput.c
+bse/bsemain.c
 bse/bsemidicontroller.c
+bse/bsemididevice-null.c
+bse/bsemididevice-oss.c
 bse/bsemidiinput.c
 bse/bsemidisynth.c
 bse/bsemidivoice.c
 bse/bseparasite.proc
+bse/bsepcmdevice-null.c
+bse/bsepcmdevice-oss.c
 bse/bsepcminput.c
 bse/bsepcmoutput.c
 bse/bseserver.c
